fixed small spacing issues across all pages. .

--- a/week7/css/styles.css
+++ b/week7/css/styles.css
@@ -5,9 +5,13 @@
 	font-weight: normal;
 }
 
+p{
+	padding: 12px;
+}
+
 header {
 	background-image:url('../images/gradient.png');
-
+	padding: 0px 6px;
 }
 
 h1 {
@@ -18,7 +22,6 @@ h1 {
 h2 {
 	font-size: 18px;
 	font-family: 'Lucida Calligraphy', cursive;
-	margin: 0 auto 0 auto 0;
 }
 
 #quote {
